; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_kpi_mbuf.c_mbuf_ring_cluster_alloc.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_kpi_mbuf.c_mbuf_ring_cluster_alloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@EINVAL = common dso_local global i32 0, align 4
@ENOMEM = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mbuf_ring_cluster_alloc(i32 %0, i32 %1, i32** %2, void (i32*, i32, i32*)* %3, i64* %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32**, align 8
  %10 = alloca void (i32*, i32, i32*)*, align 8
  %11 = alloca i64*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i32, align 4
  store i32 %0, i32* %7, align 4
  store i32 %1, i32* %8, align 4
  store i32** %2, i32*** %9, align 8
  store void (i32*, i32, i32*)* %3, void (i32*, i32, i32*)** %10, align 8
  store i64* %4, i64** %11, align 8
  store i32* null, i32** %12, align 8
  %14 = load i32**, i32*** %9, align 8
  %15 = icmp eq i32** %14, null
  br i1 %15, label %26, label %16

16:                                               ; preds = %5
  %17 = load void (i32*, i32, i32*)*, void (i32*, i32, i32*)** %10, align 8
  %18 = icmp eq void (i32*, i32, i32*)* %17, null
  br i1 %18, label %26, label %19

19:                                               ; preds = %16
  %20 = load i64*, i64** %11, align 8
  %21 = icmp eq i64* %20, null
  br i1 %21, label %26, label %22

22:                                               ; preds = %19
  %23 = load i64*, i64** %11, align 8
  %24 = load i64, i64* %23, align 8
  %25 = icmp eq i64 %24, 0
  br i1 %25, label %26, label %28

26:                                               ; preds = %22, %19, %16, %5
  %27 = load i32, i32* @EINVAL, align 4
  store i32 %27, i32* %6, align 4
  br label %54

28:                                               ; preds = %22
  %29 = load i32, i32* %7, align 4
  %30 = load i64*, i64** %11, align 8
  %31 = call i32 @mbuf_alloccluster(i32 %29, i64* %30, i32** %12)
  store i32 %31, i32* %13, align 4
  %32 = icmp ne i32 %31, 0
  br i1 %32, label %33, label %35

33:                                               ; preds = %28
  %34 = load i32, i32* %13, align 4
  store i32 %34, i32* %6, align 4
  br label %54

35:                                               ; preds = %28
  %36 = load i32**, i32*** %9, align 8
  %37 = load i32*, i32** %36, align 8
  %38 = load i32, i32* %8, align 4
  %39 = load i32*, i32** %12, align 8
  %40 = load void (i32*, i32, i32*)*, void (i32*, i32, i32*)** %10, align 8
  %41 = load i64*, i64** %11, align 8
  %42 = load i64, i64* %41, align 8
  %43 = load i32, i32* %7, align 4
  %44 = call i32* @m_clattach(i32* %37, i32 %38, i32* %39, void (i32*, i32, i32*)* %40, i64 %42, i32* null, i32 %43, i32 1)
  %45 = load i32**, i32*** %9, align 8
  store i32* %44, i32** %45, align 8
  %46 = icmp eq i32* %44, null
  br i1 %46, label %47, label %53

47:                                               ; preds = %35
  %48 = load i32*, i32** %12, align 8
  %49 = load i64*, i64** %11, align 8
  %50 = load i64, i64* %49, align 8
  %51 = call i32 @mbuf_freecluster(i32* %48, i64 %50)
  %52 = load i32, i32* @ENOMEM, align 4
  store i32 %52, i32* %6, align 4
  br label %54

53:                                               ; preds = %35
  store i32 0, i32* %6, align 4
  br label %54

54:                                               ; preds = %53, %47, %33, %26
  %55 = load i32, i32* %6, align 4
  ret i32 %55
}

declare dso_local i32 @mbuf_alloccluster(i32, i64*, i32**) #1

declare dso_local i32* @m_clattach(i32*, i32, i32*, void (i32*, i32, i32*)*, i64, i32*, i32, i32) #1

declare dso_local i32 @mbuf_freecluster(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
